# truerag

./: .dockerignore  .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TrueRAG.postman_collection.json  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffold-and-application-skeleton.md  1-10-beanie-odm-dao-layer-and-dynamodb-removal.md  1-11-loguru-logging-request-response-middleware-with-masking.md  1-12-generic-service-error-decorator.md  1-13-class-based-service-architecture-solid-refactor.md  1-2-core-configuration-and-structured-logging.md  1-3-error-handling-infrastructure.md  1-4-database-and-external-service-connections-with-health-readiness-endpoints.md  1-5-secrets-management-retry-decorator-and-pii-scrubbing-utility.md  1-6-api-key-authentication-and-cross-tenant-access-control.md  1-7-per-tenant-rate-limiting.md  1-8-abstract-interfaces-and-provider-registry.md  1-9-semantic-cache-stub.md  10-1-terraform-infrastructure-core-aws-services.md  10-2-ecs-fargate-services-api-and-worker-task-definitions.md  10-3-cloudwatch-alarms-and-ragas-regression-alerting.md  10-4-github-actions-cicd-pipeline-with-ragas-eval-gate.md  10-5-local-development-docker-compose.md  2-1-tenant-registration-and-api-key-issuance.md  2-2-tenant-listing-and-deletion.md  2-3-rag-agent-creation-with-full-pipeline-configuration.md  2-4-agent-retrieval-and-listing.md  2-5-runtime-agent-config-update-and-mismatch-detection.md  2-6-agent-deletion.md  3-1-document-upload-s3-archive-and-sqs-enqueue.md  3-2-sqs-consumer-worker-and-ingestion-job-status-tracking.md  3-3-ingestion-status-polling-and-document-listing.md  3-4-pii-scrubbing-at-ingestion.md  3-5-pluggable-queue-backend-sqs-kafka-local.md  4-1-document-parsing-and-fixed-size-chunking.md  4-2-openai-embedding-generation.md  4-3-pgvector-upsert-with-namespace-isolation.md  4-4-document-deletion-with-chunk-cleanup.md  4-5-document-versioning-via-hash-deduplication.md  4-6-developer-triggered-full-reindex.md  5-1-query-endpoint-and-pii-scrubbing.md  5-2-dense-vector-retrieval-with-metadata-filtering.md  5-3-answer-generation-with-citations-confidence-score-and-structured-output.md  5-4-query-audit-logging.md  5-5-end-to-end-query-latency-validation.md  (+22 more)
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-17.md  implementation-readiness-report-2026-04-18.md  prd.md  requirements-brief.md  sprint-change-proposal-2026-04-30.md  sprint-change-proposal-2026-05-07.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
app/: main.py
app/core/: auth.py  config.py  decorators.py  dependencies.py  errors.py  exception_handlers.py  middleware.py  rate_limiter.py
app/db/: base_dao.py
app/interfaces/: __init__.py  chunking_strategy.py  embedding_provider.py  llm_provider.py  queue_backend.py  reranker.py  vector_store.py
app/models/: __init__.py  agent.py  chunk.py  conversation.py  document.py  eval.py  ingestion_job.py  query.py  query_cost.py  tenant.py
app/providers/: registry.py
app/services/: agent_service.py  audit_service.py  eval_service.py  ingestion_service.py  metrics_service.py  query_service.py  tenant_service.py
app/utils/: circuit_breaker.py  cost_tracker.py  file_store.py  observability.py  pagination.py  pii.py  retry.py  secrets.py  semantic_cache.py  time.py
app/workers/: dlq_handler.py  entrypoint.py  ingestion_worker.py  sqs_consumer.py
docs/adrs/: 007-rate-limiting.md  008-abstract-interfaces-and-provider-registry.md  adr-007-semantic-chunking-strategy.md  adr-008-bm25-query-time-index.md  adr-009-reranking-cross-encoder-cohere.md  adr-010-extension-model-validation.md  adr-011-metrics-reset-on-restart.md  adr-011-qdrant-vector-store-backend.md  adr-011-regression-detection-cloudwatch-sns.md  adr-012-pinecone-vector-store-backend.md  adr-012-terraform-infrastructure-core-aws-services.md  adr-013-cohere-bedrock-embedding-providers.md  adr-014-openai-bedrock-llm-providers.md  adr-017-ecs-fargate-topology.md  adr-018-ragas-regression-alerting.md  adr-019-cicd-eval-gate-strategy.md
scripts/: eval_gate.py  locustfile.py  seed_tenant.py
terraform/: README.md  main.tf  outputs.tf
tests/: conftest.py  test_main.py
tests/api/: test_query_stream.py
tests/core/: test_auth.py  test_auth_rbac.py  test_config.py  test_decorators.py  test_dependencies.py  test_errors.py  test_exception_handlers.py  test_middleware.py  test_rate_limiter.py  test_rate_limiter_beanie.py
tests/infra/: test_cloudwatch_terraform.py  test_story_10_2.sh  test_terraform_story_10_1.py
tests/interfaces/: __init__.py  test_interfaces.py  test_queue_backend.py
tests/pipelines/: test_faithfulness_check.py  test_generator_conversation.py  test_hyde_retrieval.py  test_ingestion_pipeline_chunker.py  test_mmr_filter.py  test_multi_query_retrieval.py  test_query_generator.py  (+6 more)
(+167 files in other folders)
