[project]
name = "truerag"
version = "0.1.0"
description = "TrueRAG — Production-grade open-source RAG Engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "gunicorn>=22.0.0,<24.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "motor>=3.4.0,<4.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "pgvector>=0.3.6,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "aioboto3>=13.0.0,<14.0.0",
    "presidio-analyzer>=2.2.354,<3.0.0",
    "presidio-anonymizer>=2.2.354,<3.0.0",
    "spacy>=3.7.0,<4.0.0",
    "tiktoken>=0.7.0,<1.0.0",
    "pypdf>=4.0.0,<5.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "beanie>=1.26",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
