[project]
name = "truerag"
version = "0.1.0"
description = "TrueRAG — Production-grade open-source RAG Engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "gunicorn>=22.0.0,<24.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "motor>=3.4.0,<4.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "pgvector>=0.3.6,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "aioboto3>=13.0.0,<14.0.0",
    "presidio-analyzer>=2.2.354,<3.0.0",
    "presidio-anonymizer>=2.2.354,<3.0.0",
    "spacy>=3.7.0,<4.0.0",
    "tiktoken>=0.7.0,<1.0.0",
    "pypdf>=4.0.0,<5.0.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0,<2.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "sentence-transformers>=3.0",
    "cohere>=5.0",
    "beanie>=1.26,<2.0",
    "rank-bm25>=0.2",
    "qdrant-client>=1.7.0",
    "pinecone>=3.0.0",
    "loguru>=0.7.0,<1.0.0",
    "kafka-python-ng>=2.2.0,<3.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
    "ragas>=0.1.0,<0.2.0",
    "datasets>=2.14.0,<3.0.0",
]

[dependency-groups]
dev = [
    "locust>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.9.0,<2.0.0",
    "pre-commit>=3.7.0,<4.0.0",
    "types-boto3>=1.0.0",
    "types-requests>=2.31.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "aioboto3",
    "anthropic",
    "asyncpg",
    "botocore",
    "botocore.exceptions",
    "cohere",
    "openai",
    "pgvector.asyncpg",
    "rank_bm25",
    "pinecone",
    "sentence_transformers",
    "spacy",
    "tiktoken",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require integration-level dependencies",
]
